# fuel_monitoring_service

./: Cargo.toml  README.md  load.sh  monitoring.sh
.githooks/: pre-commit
.github/workflows/: ci.yaml
.github/workflows/ci.yaml/: ci.yaml
docker/: Dockerfile  docker-compose.yaml
k8s/: namespace.yaml
k8s/api/: configmap.yaml  deployment.yaml  hpa.yaml  ingres.yaml  secret.yaml  service.yaml
k8s/postgres/: pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/core/: handler.rs  route.rs
src/api/vessels/: mod.rs  routes.rs
src/api/vessels/application/: handlers.rs  mod.rs  service.rs
src/api/vessels/infrastructure/: mod.rs  models.rs  repository.rs
src/context_containers/: infra_context.rs  mod.rs  vessels_context.rs
tests/: vessels_test_4.rs  vessels_test_5.rs
